crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__internal-link-pipe-trick.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\href{Help:Foo}{Foo} and \href{A}{b \url{c} d}
