crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__internal-links.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
See \href{Main_Page}{Main Page} and \href{Page}{the label} and
\href{Page}{Pages} here.
