crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__math.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
The formula \(x^2 + y^2 = z^2\) is famous.
