crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__nowiki.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Literal \textquotesingle\textquotesingle\textquotesingle not
bold\textquotesingle\textquotesingle\textquotesingle{} and {[}{[}not a
link{]}{]} here.
