crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__paragraph-heading-boundary.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
intro

\subsection{b c}\label{b_c}
