crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__preformatted.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\texttt{preformatted~line~with~~spaced~gaps}
