crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__references.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A claim\footnote{The source.} here.
