crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__table-align.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}cl@{}}
\toprule\noalign{}
Centered & Left \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
one & two \\
\end{longtable}
}
